fixed alignment - not responsive

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,20 +1,47 @@
-.banner {
-  background-image: url(plant.jpg);
-  background-repeat: no-repeat;
-  max-width: 100%;
-  min-height: -webkit-fill-available;
-  height: auto;
-  background-size: cover;
-  background-position: center;
-  padding: 16% 5% 8% 5%;
-  display: flex;
-  position: relative;
-  z-index: 10;
-}
+// @media(max-width: 500px) {
+  .banner {
+    background-image: url(plant.jpg);
+    background-repeat: no-repeat;
+    max-width: 100%;
+    min-height: -webkit-fill-available;
+    height: auto;
+    background-size: cover;
+    background-position: center;
+    padding: 100px 20px;
+    display: flex;
+    position: relative;
+    z-index: 10;
+   }
+// }
+
+// @media(max-width: 1200px) {
+//   .banner {
+//     background-image: url(plant.jpg);
+//     background-repeat: no-repeat;
+//     max-width: 100%;
+//     background-size: cover;
+//     background-position: center;
+//     min-height: 50vh;
+//     height: auto;
+//     display: flex;
+//     padding: 16% 5% 8% 5%;
+
+//   }
+// }
 
 .banner a {
   text-decoration: none !important;
   color: black !important;
+}
+
+.banner em {
+  // border: solid 1px black;
+  text-shadow: 1px 1px 3px rgba(0,0,0,1);
+  // box-shadow: 1px 1px 3px rgba(0,0,0,1);
+  padding: 12px;
+  background-color: rgba(0,0,0,0.4);
+  opacity: 0.5;
+  color: white;
 }
 
 .banner h1 {
@@ -27,15 +54,17 @@
 }
 
 .banner p {
-  font-size: 20px;
+  font-size: 32px;
+  padding: 24px 0;
   color: black;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
 // .container {
-//   border: solid 3px black;
-//   border-radius: 10px;
-//   padding: 4vh 6vw;
-//   max-width: 150px;
+//   // min-height: 100vh;
+// //   border: solid 3px black;
+// //   border-radius: 10px;
+// //   padding: 4vh 6vw;
+// //   max-width: 150px;
 // }
