--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
   background: #F4F4F4;
-  // display: flex;
+  display: flex;
   align-items: center;
   // flex-direction: row;
-  // justify-content: space-between;
+  justify-content: space-between;
   height: 100px;
   padding: 8px 16px;
   color: rgba(0,0,0,0.6);
@@ -28,7 +28,7 @@
   color: rgba(0,0,0,0.3);
   opacity: 0.15;
   text-decoration: none;
-  text-align: right;
+  // text-align: right;
   // font-size: 16px;
 }
 .footer-links a:hover {
@@ -36,15 +36,15 @@
   color: black;
 }
 
-.contact {
-  text-align: left;
-}
+// .contact {
+//   text-align: center;
+// }
 
-.opening-hours {
-  text-align: center;
-}
+// .opening-hours {
+//   text-align: center;
+// }
 
 #email {
   font-size: 10px;
-  text-align: right;
+  // text-align: center;
 }
